<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ViewSample!</string>
    <string name="app_name">ViewSample</string>
    
    <!-- 各Viewで使用する文字列の定義 -->
    <string name="textviewsample1">Viewのサンプルです。</string>
    <string name="checkboxsample1">チェックボックス1</string>
    <string name="checkboxsample2">チェックボックス2</string>
    <string name="radiobuttonsample1">ラジオボタン1</string>
    <string name="radiobuttonsample2">ラジオボタン2</string>
    <string name="buttonsample1">保存</string>
    
    <string-array name="list_name">
      <item>あいうえお</item>
      <item>かきくけこ</item>
      <item>さしすせそ</item>
    </string-array>
    
</resources>

